Added an option to run the Axis2 standalone server with Java 2 security enabled. (Will change the .bat script when I get access to a Windows machine)